--- a/sass/content/_index.scss
+++ b/sass/content/_index.scss
@@ -1,2 +1,82 @@
-
+.showbill {
+	display: block;
+	position: relative;
+	width: 100%;
+	z-index: 99;
+	background-color: #FFF;
+	padding: 125px 0 100px;
+	top: -10px;
+	&__item {
+		display: block;
+		position: relative;
+		margin: 25px 0;
+		&--img {
+			width: 100%;
+			height: 115px;
+			background-color: #acacac;
+			@include box-shadow(0, 3px, 10px, rgba(0,1,3,.29));
+			@include ovf-img;
+		}
+		&--time {
+			margin-top: 15px;
+			h3 {
+				color: #958362;
+				font-size: 17px;
+				text-align: right;
+				margin-top: 0;
+				text-transform: uppercase;
+				letter-spacing: 1px;
+				span {
+					display: block;
+					font-size: 70px;
+					font-family: $b;
+				}			
+			}
+			p {
+				text-align: right;
+				font-size: 13px;
+				color: #65665B;
+				letter-spacing: 1px;
+			}
+		}
+		&--info {
+			text-align: left;
+			margin-top: 15px;
+			line-height: 75px;
+			h2 {
+				font-family: $b;
+				font-size: 24px;
+				color: #37392B;
+				letter-spacing: 1px;
+				text-transform: uppercase;
+				margin-top: 0;
+				margin-bottom: 0;
+				display: inline-block;
+				vertical-align: middle;
+				line-height: normal;
+			}
+			p {
+				text-transform: uppercase;
+				color: #7A7B72;
+				font-size: 11px;
+				letter-spacing: 1px;
+				line-height: normal;
+			}
+		} 		
+	}
+	&__more {
+		text-align: center;
+		margin: 35px 0;
+		a {
+			letter-spacing: 2px;
+			text-align: center;
+			margin: 0 auto;
+			font-size: 11px;
+			color: #B38543;
+			&:hover {
+				color: lighten(#B38543, 25%);
+			}
+		}				
+	}
+}
 
