--- a/sass/style.css
+++ b/sass/style.css
@@ -106,6 +106,7 @@ ul {
   font-size: 30px;
   text-align: center;
   margin-top: 25px;
+  text-transform: uppercase;
   font-family: "CirceBold"; }
 
 .p0 {
@@ -221,7 +222,7 @@ ul {
   width: 100%;
   z-index: 99;
   background-color: #FFF;
-  padding: 125px 0 100px;
+  padding: 125px 0 25px;
   top: -10px; }
   .showbill__item {
     display: block;
@@ -300,6 +301,83 @@ ul {
       color: #B38543; }
       .showbill__more a:hover {
         color: #dac09c; }
+
+.news {
+  display: block;
+  position: relative;
+  width: 100%;
+  background-image: url(../img/bg1.png);
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 25px 0 85px; }
+  .news__item {
+    margin: 25px 0; }
+    .news__item--img {
+      width: 90%;
+      height: 107px;
+      display: block;
+      float: left;
+      overflow: hidden;
+      text-align: center;
+      word-spacing: nowrap;
+      vertical-align: middle; }
+      .news__item--img:after {
+        content: "";
+        display: inline-block;
+        height: 100%;
+        vertical-align: middle; }
+      .news__item--img img {
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+        max-width: 100%;
+        min-height: 100%;
+        vertical-align: middle; }
+      .news__item--img img {
+        width: 100%; }
+    .news__item--soc {
+      display: block;
+      float: left;
+      width: 10%; }
+      .news__item--soc a {
+        display: block;
+        float: right;
+        color: #FFF;
+        margin: 0 0 5px;
+        line-height: 28px;
+        text-align: center;
+        width: 28px;
+        height: 28px;
+        background-color: #272727; }
+        .news__item--soc a:hover {
+          background-color: #41588E; }
+    .news__item--title {
+      display: block;
+      width: 90%;
+      float: left;
+      color: #eee5d9;
+      margin-top: 20px; }
+      .news__item--title a {
+        color: #eee5d9;
+        font-size: 9px;
+        text-transform: uppercase; }
+      .news__item--title p {
+        font-size: 12px; }
+      .news__item--title h4 {
+        font-size: 18px;
+        text-transform: uppercase;
+        color: #fff; }
+  .news__more {
+    margin-top: 25px;
+    text-transform: uppercase;
+    color: #FFF;
+    font-size: 12px;
+    display: block;
+    float: left; }
+    .news__more:hover {
+      color: #fff; }
 
 @media only screen and (max-width: 770px) {
   .align-left {
