--- a/sass/style.css
+++ b/sass/style.css
@@ -307,11 +307,13 @@ ul {
   position: relative;
   width: 100%;
   background-image: url(../img/bg1.png);
+  background-color: rgba(255, 255, 255, 0);
   -webkit-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 25px 0 85px; }
+  padding: 25px 0 85px;
+  z-index: 9; }
   .news__item {
     margin: 25px 0; }
     .news__item--img {
@@ -378,6 +380,41 @@ ul {
     float: left; }
     .news__more:hover {
       color: #fff; }
+
+.company {
+  display: block;
+  float: left;
+  width: 100%;
+  background-image: url("../img/bg2-2.png");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-color: #000;
+  padding: 75px 0 100px;
+  margin-top: -50px;
+  color: #E8C76C; }
+  .company h4 {
+    font-family: "CirceLight";
+    font-size: 31px;
+    text-align: center;
+    margin: 50px; }
+  .company h2 {
+    font-size: 60px;
+    font-family: "CirceLight";
+    text-align: center;
+    margin: 25px 0 50px; }
+  .company p {
+    color: #fff;
+    text-align: center;
+    font-size: 20px; }
+  .company span {
+    color: #E4D190;
+    text-align: center;
+    font-size: 12px;
+    margin-top: 50px;
+    display: block; }
 
 @media only screen and (max-width: 770px) {
   .align-left {
