--- a/sass/content/_index.scss
+++ b/sass/content/_index.scss
@@ -157,6 +157,7 @@
 		}
 	}
 }
+
 .company {
 	display: block;
 	float: left;
@@ -194,6 +195,68 @@
 		font-size: 12px;
 		margin-top: 50px;
 		display: block;
+	}
+}
+
+.artists {
+	display: block;
+	float: left;
+	position: relative;
+	width: 100%;
+	padding: 50px 0 175px;
+	background-image: url('../img/bg3.png');
+	background-color: rgba(255, 255, 255, 0);
+	-webkit-background-size: 100%;
+	     -o-background-size: 100%;
+	        background-size: 100%;
+	background-position: 50% 100%;
+	background-repeat: no-repeat;
+	&__item {
+		margin: 25px 0;
+		&--img {
+			@include border-radius(50%);
+			//width: 90%;
+			display: block;
+			margin: 0 auto;
+			width: 268px;
+			height: 268px;
+			@include background-clip(padding-box);
+			background-color: #acacac;
+			@include ovf-img;
+		}
+		&--desc {
+			text-align: center;
+			margin-top: 15px;
+			display: block;
+			h4 {
+				text-transform: uppercase;
+				color: #FFF;
+				text-align: center;
+				font-size: 33px;
+				font-family: $b;
+			}
+			a {
+				color: #FFF;
+				font-size: 14px;
+			}
+			&--soc {
+				display: block;
+				text-align: center;
+				width: 75px;
+				margin: 25px auto;
+				a {
+					display: block;
+					float: left;
+					font-size: 20px;
+					color: #FFF;
+					margin: 0 10px;
+					@include transition(0.5s);
+					&:hover {
+						color: #C87043;
+					}
+				}
+			}
+		}
 	}
 }
 
