--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -17,8 +17,10 @@ ul {
     font-size: 30px;
 	text-align: center;
 	margin-top: 25px;
+	margin-bottom: 25px;
 	text-transform: uppercase;
 	font-family: $b;
+	display: block;
 }
 
 .p0  {
@@ -48,6 +50,15 @@ ul {
   .container {
     width: 1160px;
   }
+}
+
+.col7 {
+	display: block;
+	float: left;
+	padding: 0 15px;
+	position: relative;
+	width: 1 / 7 * 100%;
+	min-height: 1px;
 }
 
 
