--- a/sass/style.css
+++ b/sass/style.css
@@ -530,7 +530,7 @@ ul {
   float: left;
   position: relative;
   width: 100%;
-  padding: 75px 0 150px; }
+  padding: 75px 0 25px; }
   .contacts__map {
     height: 310px;
     margin-bottom: 50px; }
@@ -564,7 +564,8 @@ ul {
     background-clip: padding-box;
     outline: none;
     padding: 0 15px;
-    font-size: 21px; }
+    font-size: 21px;
+    margin-top: 15px; }
   .contacts--text {
     color: #80786E;
     display: block;
@@ -606,6 +607,31 @@ ul {
     transition: all 0.5s linear; }
     .contacts--sub:hover, .contacts--sub:active, .contacts--sub:focus {
       background-color: #7d673a; }
+
+.footer {
+  display: block;
+  float: left;
+  position: relative;
+  width: 100%;
+  height: 280px;
+  background-image: url("../img/bg5.png");
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  padding: 50px 0 25px; }
+  .footer p {
+    color: #FFF;
+    font-size: 15px;
+    margin: 15px 0; }
+  .footer a {
+    font-size: 18px;
+    color: #FFF;
+    display: block;
+    float: left;
+    margin: 15px 10px;
+    text-align: center; }
 
 @media only screen and (max-width: 770px) {
   .align-left {
