--- a/sass/content/_index.scss
+++ b/sass/content/_index.scss
@@ -189,13 +189,25 @@
 		text-align: center;
 		font-size: 20px;
 	}
-	span {
-		color: #E4D190;
-		text-align: center;
-		font-size: 12px;
+	&__links {
 		margin-top: 50px;
-		display: block;
+		width: 100%;
+		text-align: center;
+		a {
+			display: inline-block;
+			float: none;
+			position: relative;
+			padding: 0 5px;
+			color: #E4D190;
+			text-align: center;
+			font-size: 12px;
+			border-left: 1px solid #E4D190;
+			&:first-of-type {
+				border-left: none;
+			}
+		}
 	}
+
 }
 
 .artists {
