--- a/sass/style.css
+++ b/sass/style.css
@@ -419,12 +419,21 @@ ul {
     color: #fff;
     text-align: center;
     font-size: 20px; }
-  .company span {
-    color: #E4D190;
-    text-align: center;
-    font-size: 12px;
+  .company__links {
     margin-top: 50px;
-    display: block; }
+    width: 100%;
+    text-align: center; }
+    .company__links a {
+      display: inline-block;
+      float: none;
+      position: relative;
+      padding: 0 5px;
+      color: #E4D190;
+      text-align: center;
+      font-size: 12px;
+      border-left: 1px solid #E4D190; }
+      .company__links a:first-of-type {
+        border-left: none; }
 
 .artists {
   display: block;
