--- a/sass/header/_navigation.scss
+++ b/sass/header/_navigation.scss
@@ -28,3 +28,18 @@
 	margin-bottom: 0;
 	z-index: 9999;
 }
+
+.navbar-brand {
+	display: none;
+    padding: 10px 0;
+	h3{
+		color: #000;
+		text-transform: uppercase;
+		font-size: 30px;
+		font-family: $mpreg;
+		margin: 0;
+		span {
+			color: #B88909;
+		}
+	}
+}
