--- a/sass/header/_navigation.scss
+++ b/sass/header/_navigation.scss
@@ -31,7 +31,7 @@
 
 .navbar-brand {
 	display: none;
-    padding: 10px 0;
+    padding: 10px 0 0 10px;
 	h3{
 		color: #000;
 		text-transform: uppercase;
