--- a/sass/responsive/_style.scss
+++ b/sass/responsive/_style.scss
@@ -71,4 +71,35 @@
 	.navbar-nav > li > a {
 		padding: 5px 0;
 	}
+
+	.company {
+		h4 {
+			font-size: 21px;
+			margin: 25px 0;
+	    }
+	    h2 {
+	    	font-size: 42px;
+	    }
+	    p {
+	    	font-size: 16px;
+	    }
+	}
+
+	.artists {
+		-webkit-background-size: cover;
+		     -o-background-size: cover;
+		        background-size: cover;
+	    .block_title {
+	    	color: #FFF;
+	    }
+	}
+	.showbill {
+		padding-top: 35px;
+	}
+	.col7 {
+		width: 50%;
+		&:last-of-type {
+			margin: 0 25%;
+		}
+	}
 }
