--- a/sass/libs/_mixins.scss
+++ b/sass/libs/_mixins.scss
@@ -51,7 +51,7 @@
 		top: 50%;
 		transform: translateY(-50%);
 		max-width: 100%;
-		min-height: 100%;
+		height: auto;
 		vertical-align: middle;
 	}
 }
