--- a/sass/header/_head.scss
+++ b/sass/header/_head.scss
@@ -68,3 +68,32 @@
 		
 	}
 }
+
+.page__header {
+	display: block;
+	float: left;
+	width: 100%;
+	height: 220px;
+	background-image: url('../img/page_header.png');
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	padding-top: 75px;
+	position: relative;
+	z-index: 9;
+	&__logo {
+		position: relative;		
+		right: 75px;
+		float: right;
+		z-index: 9;
+		h3{
+			color: #fff;
+			text-transform: uppercase;
+			font-size: 30px;
+			font-family: $r;
+			span {
+				color: #d0a568;
+				font-family: $eb;
+			}
+		}
+	}
+}
